fix: adjust hero section layout for improved spacing and alignment

--- a/style.css
+++ b/style.css
@@ -934,23 +934,30 @@ footer #menu-mobile {
     display: block;
   }
 
+  #hero {
+    margin-top: 92px;
+    height: auto;
+    padding: 48px 0;
+  }
+
   #hero > .wrapper {
     flex-direction: column;
+    gap: 48px;
+  }
+
+  #hero .content {
+    max-width: 100%;
   }
 
   #hero .hero-img {
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
     align-items: center;
     width: 100%;
   }
 
   .container {
     margin: 15px 32px;
-  }
-
-  #hero {
-    height: auto;
   }
 
   #about .carrousel > .years {
